--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@alpinejs/focus": "^3.15.1",
+        "alpinejs": "^3.15.1"
     }
 }
